--- a/hw15/package.json
+++ b/hw15/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch './src'",
     "prod": "webpack  --mode production",
     "dev": "webpack-dev-server --mode development --open --watch"
   },
@@ -25,5 +25,8 @@
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.4.1"
+  },
+  "dependencies": {
+    "axios": "^0.19.0"
   }
 }
